force/src/objects/Eyewear_Brand_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Account ID from Salesforce</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eyewear Brand Sales</relationshipLabel>
        <relationshipName>Eyewear_Brand_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Group Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Group Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Frame_Sales_LTM__c</fullName>
        <label>Net Frame Sales LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_LTM__c</fullName>
        <label>Net Sales LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_MDM_Account_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sold To MDM Account Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_MDM_Location_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sold To MDM Location Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Eyewear Brand Sales</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Eyewear Brand Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eyewear Brand Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>